--- a/AppServer/src/static/index_html_req.html
+++ b/AppServer/src/static/index_html_req.html
@@ -31,11 +31,16 @@
    	  console.log("jQuery");
 
       $.ajax({
-        url: 'http://localhost:8000/una/uri/representativa',
+        url: 'http://localhost:8000/register',
         method: 'POST',
         dataType: 'json',
         data: { 
-        	number: $('#number').val() 
+          userName: "eze210",
+          userPassword: "210",
+          userRealName: "Ezequiel",
+          userMail: "eze210@gmail.com",
+          userBirthday: "02/10/1993",
+          userSex: "Male"
         },
         success: function(json) {
         	console.log("success");
