--- a/AppServer/src/static/index_html_req.html
+++ b/AppServer/src/static/index_html_req.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>RESTful API demo</title>
+  <title>Add User</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style type="text/css">
     * { outline: none; }
@@ -27,21 +27,29 @@
 <script language="javascript" type="text/javascript">
   jQuery(function() {
 
-    $(document).on('keyup', '#urlInput, #number', function() {
-   	  console.log("jQuery");
+    $(document).on('keyup', function(event) {
+   	  if( event.keyCode != 13 )
+        return;
+
+      var userName = document.getElementById('userName').value;
+      var realName = document.getElementById('realName').value;
+      var userMail = document.getElementById('userMail').value;
+      var userSex = document.getElementById('userSex').value;
 
       $.ajax({
         url: 'http://localhost:8000/register',
+        //url: 'http://localhost:5000/users',
         method: 'POST',
+        contentType: 'application/json',
         dataType: 'json',
-        data: '{  \
-          "userName": "eze210", \
-          "userPassword": "210",  \
-          "userRealName": "Ezequiel", \
-          "userMail": "eze210@gmail.com", \
-          "userBirthday": "02/10/1993", \
-          "userSex": "Male" \
-        }',
+        data: JSON.stringify({ 
+          userName: userName,
+          userPassword: "210",
+          userRealName: realName,
+          userMail: userMail,
+          userBirthday: "02/10/1993",
+          userSex: userSex
+        }),
         success: function(json) {
           $('#response').html(json.response);
         },
@@ -56,19 +64,24 @@
 </head>
 <body>
   <div class="content">
-    <h1>RESTful API demo.</h1>
+    <h1>Adding user demo.</h1>
 
     <p>
-      This page demonstrates how Mongoose could be used to implement
-      RESTful APIs. Start typing an url and a number into the text fields below.
-      Browser sends the number to the URI.
-      Web server calclulates number*number and returns the response.
+      Podemos simular un cliente android que crea su usuarios 
+      mediante esta página, agregando algunos campos a continuación.
     </p>
 
     <div>
-      <label>Write the url (write /api/post/number):</label> <input type="text" id="urlInput" />
+      <label>NickName:</label> <input type="text" id="userName" />
     </div><div>
-      <label>Number:</label> <input type="text" id="number" />
+    <div>
+      <label>RealName:</label> <input type="text" id="realName" />
+    </div><div>
+    <div>
+      <label>email:</label> <input type="text" id="userMail" />
+    </div><div>
+    <div>
+      <label>Your genre:</label> <input type="text" id="userSex" />
     </div><div>
      <label>response:</label> <span id="response">&nbsp;</span>
     </div><div>
