Adding edit profile support. #31

--- a/AppServer/src/static/index_register.html
+++ b/AppServer/src/static/index_register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Login Demo</title>
+  <title>Add User</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style type="text/css">
     * { outline: none; }
@@ -33,20 +33,37 @@
 
 
 
-      var email = document.getElementById('email').value;
+      var name = document.getElementById('name').value;
+      var alias = document.getElementById('alias').value;
       var password = document.getElementById('password').value;
+      var email = document.getElementById('email').value;
+      var birthday = document.getElementById('birthday').value;
+      var sex = document.getElementById('sex').value;
+      var latitude = document.getElementById('latitude').value;
+      var longitude = document.getElementById('longitude').value;
+      var photo_profile = document.getElementById('photo_profile').value;
 
       $.ajax({
-        url: 'http://localhost:8000/login',
+        url: 'http://localhost:8000/register',
         method: 'POST',
         contentType: 'application/json',
         dataType: 'json',
         data: JSON.stringify({ 
+          name: name,
+          alias: alias,
           password: password,
-          email: email
+          email: email,
+          birthday: birthday,
+          sex: sex,
+          photo_profile: photo_profile,
+          location: JSON.stringify({
+            latitude: latitude,
+            longitude: longitude
+          }),
+          interests: []
         }),
         success: function(json) {
-          $('#response').html(JSON.stringify(json));
+          $('#response').html(json.response);
         },
         error: function(json) {
         	console.log("error");
@@ -59,18 +76,39 @@
 </head>
 <body>
   <div class="content">
-    <h1>Login demo.</h1>
+    <h1>Adding user demo.</h1>
 
     <p>
-      Podemos simular un cliente android que ingresa al sistema 
+      Podemos simular un cliente android que crea su usuarios 
       mediante esta página, agregando algunos campos a continuación.
     </p>
 
     <div>
-      <label>email:</label> <input type="text" id="email" />
+      <label>Name:</label> <input type="text" id="name" />
+    </div><div>
+    <div>
+      <label>Alias:</label> <input type="text" id="alias" />
     </div><div>
     <div>
       <label>Password:</label> <input type="text" id="password" />
+    </div><div>
+    <div>
+      <label>email:</label> <input type="text" id="email" />
+    </div><div>
+    <div>
+      <label>Birthday:</label> <input type="text" id="birthday" />
+    </div><div>
+    <div>
+      <label>Your genre:</label> <input type="text" id="sex" />
+    </div><div>
+    <div>
+      <label>Latitude:</label> <input type="float" id="latitude" />
+    </div><div>
+    <div>
+      <label>Longitude:</label> <input type="float" id="longitude" />
+    </div><div>
+    <div>
+      <label>Photo:</label> <input type="text" id="photo_profile" />
     </div><div>
      <label>response:</label> <span id="response">&nbsp;</span>
     </div><div>
