Parsing json interests array. #21 #31

--- a/AppServer/src/static/index_register.html
+++ b/AppServer/src/static/index_register.html
@@ -60,7 +60,12 @@
             latitude: latitude,
             longitude: longitude
           }),
-          interests: []
+          interests: [
+            {
+              category: 'music',
+              value: 'arbol'
+            }
+          ]
         }),
         success: function(json) {
           $('#response').html(json.response);
