Passing modify test. Passing linter. #33

--- a/AppServer/src/static/index_register.html
+++ b/AppServer/src/static/index_register.html
@@ -62,7 +62,7 @@
           }),
           interests: [
             {
-              category: 'music',
+              category: 'Music',
               value: 'arbol'
             }
           ]
